# tennis_backhand

./: DEPLOY.md
backend/: .dockerignore  Dockerfile  README.md  detector.py  main.py  pyproject.toml
backend/api/: main.py
backend/core/: detector.py
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
