[project]
name = "tennis-backhand-detector"
version = "0.1.0"
description = "FastAPI backend for pose-based tennis backhand detection"
# TensorFlow 2.13 only supports Python <= 3.11
requires-python = ">=3.11,<3.12"
dependencies = [
    # Web API — left unpinned so the resolver can satisfy TensorFlow 2.13's
    # typing-extensions<4.6 constraint (newer FastAPI requires >=4.8).
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    # Core
    "numpy==1.24.3",
    "opencv-python-headless==4.9.0.80",
    # ML / AI
    "tensorflow==2.13.1",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "mediapipe==0.10.32",
    "setuptools",
]

# No [build-system] section: uv treats this as a "virtual" project, so
# `uv sync` installs only the dependencies (not the app itself as a package).

[tool.uv]
package = false
